Update 'go-aednxwby' component image to: quay.io/rhtap_qe/go-aednxwby:94149752dce9dfba5274f9adac0f63d14876eb29@sha256:3f30169538ede6954fdb932348dd977116d6d232cc5277f4fbd85782e74182e7

--- a/components/go-aednxwby/overlays/development/deployment-patch.yaml
+++ b/components/go-aednxwby/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-aednxwby
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-aednxwby:94149752dce9dfba5274f9adac0f63d14876eb29@sha256:3f30169538ede6954fdb932348dd977116d6d232cc5277f4fbd85782e74182e7
+          name: container-image
